# cubesat_zero

./: .ACKCHECK_zero.c.swp  ACKCHECK_zero.c  CMDACK_zero.c  CMDHEL_zero.c  CMDPIC_zero.c  CMDRESET_zero.c  CMDSEND_zero.c  CMDVID_zero.c  CMakeLists.txt  TMSR.c  a.out  common.h  echo  functions.c  functions.h  int  main.c  picture  reset  rpi0.c  send  test  video
videos/: test.h264  test_video.h264  video_20250521_190127.h264  video_20250521_190723.h264  video_20250521_191052.h264  video_20250521_201256.h264
